--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -17,7 +17,7 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
-    <div id="msg">Clique em mim</div>
+    <div class="msg">Clique em mim</div>
     <script>
         var corpo = window.document.body
         var p1 = window.document.getElementsByTagName('p')[1]
@@ -26,8 +26,8 @@
         d.style.background = 'green'
         d.innerText = 'Estou aguardando...'
         */
-       var d = window.document.getElementsByName('msg')[0]
-       d.innerText = 'Olá!'
+        var d = window.document.querySelector('div.msg')
+        d.style.background = 'blue'
     </script>
 </body>
 </html>
