--- a/exfixacao/ex001/exfx001.html
+++ b/exfixacao/ex001/exfx001.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Nacionalidade</h1>
     Nacionalidade: <input type="" name="txtnac" id="txtnac">
+    <div id="nas">
+
+    </div>
     <script>
         
     </script>
