--- a/exfixacao/ex001/exfx001.html
+++ b/exfixacao/ex001/exfx001.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <h1>Nacionalidade</h1>
-    Nacionalidade: <input type="" name="txtnac" id="txtnac">
-    <div id="nas">
+   Qual País você nasceu? <input type="text" name="txtcoutry" id="txtcoutry">
+   <input type="button" value="Confirmar" onclick="processar()">
+    <div id="nac">
 
     </div>
     <script>
-        
+        function processar() {
+            var p = window.document.querySelector('input#txtcoutry')
+            nac.innerHTML = `<p>O País que você nasceu é: <strong>${p}</strong></p>`
+        }
     </script>
 </body>
 </html>
