--- a/exfixacao/ex001/exfx001.html
+++ b/exfixacao/ex001/exfx001.html
@@ -16,7 +16,7 @@
     <script>
         function processar() {
             var pais = window.document.querySelector('input#txtcoutry').value.toUpperCase()
-            nac.innerHTML = `<p>O País que você nasceu é: <strong>${pais}</strong></p>`
+            nac.innerHTML = `<p>Você nasceu no(a): <strong>${pais}</strong>.</p>`
         }
     </script>
 </body>
